# cloud-bdii-provider

./: README.md  requirements.txt  send_to_cmdb.py  setup.cfg  test-requirements.txt
browser/data/json/: cloud-info-provider-scm-rep-static.json  https:__api.github.com_repos_indigo-dc_cloud-info-provider_issues-its-rep-evolutionary.json  https:__api.github.com_repos_indigo-dc_cloud-info-provider_issues-its-rep-static.json  https:__github.com_indigo-dc_cloud-info-provider-pullpo-rep-evolutionary.json  https:__github.com_indigo-dc_cloud-info-provider-pullpo-rep-static.json  its-evolutionary.json  its-rep-all-evolutionary.json  its-rep-all-static.json  its-repos.json  its-static.json  its-top.json  people-10a2881b665b572bd3cd0b58ea2ce7e4339f2938-scm-evolutionary.json  people-10a2881b665b572bd3cd0b58ea2ce7e4339f2938-scm-static.json  people-1fd8b368e86c1adfd35e8590b81e2ad717cb05b1-scm-evolutionary.json  people.json  pullpo-evolutionary.json  (+26 more)
cloud_bdii/: core.py
cloud_bdii/providers/: opennebula.py  openstack.py
cloud_bdii/tests/: test_core.py  test_opennebula.py  test_openstack.py
cloud_info/: core.py  send_to_cmdb.py
cloud_info/providers/: opennebula.py  openstack.py  static.py
cloud_info/tests/: data.py  test_core.py  test_opennebula.py  test_openstack.py  test_static.py
debian/: changelog  control
doc/: admin.md  developer.md  user.md
etc/: sample.opennebula.yaml  sample.opennebularocci.yaml  sample.openstack.yaml
etc/templates/: compute.glue21  compute.ldif
rpm/: cloud-info-provider-indigo.spec  cloud-info-provider.spec
templates/common/: navbar.tmpl
