[metadata]
name = cloud_provider_indigo
summary = INDIGO Cloud info provider
version = 0.8.0
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = 
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cloud_info
data_files =
    /etc/cloud-info-provider-indigo = etc/*

[entry_points]

console_scripts =
    cloud-info-provider-indigo-service = cloud_info.core:main
    send-to-cmdb = cloud_info.send_to_cmdb:main
